--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=uknf.db"
   },
+  "Jwt": {
+    "Key": "TO_JEST_BARDZO_TAJNY_KLUCZ_ZMIEN_GO_POTEM_NA_COS_INNEGO",
+    "Issuer": "https://twoja-domena.com",
+    "Audience": "https://twoja-domena.com"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
