--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -3,7 +3,7 @@
     "DefaultConnection": "Data Source=uknf.db"
   },
   "Jwt": {
-    "Key": "TO_JEST_BARDZO_TAJNY_KLUCZ_ZMIEN_GO_POTEM_NA_COS_INNEGO",
+    "Key": "ThisIsMySuperSecureAndVeryLongKeyForJWT_YouShouldChangeItInProduction_123456789!",
     "Issuer": "https://twoja-domena.com",
     "Audience": "https://twoja-domena.com"
   },
