--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -18,12 +18,16 @@
               "zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
+            
             "assets": [
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              "src/assets",
+              "src/favicon.ico"
             ],
+            
             "styles": [
               "src/styles.css"
             ]
@@ -85,7 +89,9 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              "src/assets",
+              "src/favicon.ico"
             ],
             "styles": [
               "src/styles.css"
